--- a/frontend/pages/admin/pantau_siswa.html
+++ b/frontend/pages/admin/pantau_siswa.html
@@ -69,113 +69,14 @@
                 </tr>
               </thead>
               <tbody>
-                <tr class="cursor-pointer hover:bg-gray-100">
-                  <td class="flex items-center gap-4 py-4 px-4 border-b">
-                    <div class="size-8 rounded-full overflow-hidden">
-                      <img
-                        class="block size-full object-cover"
-                        src="/frontend/public/img/Profile-IG.jpg"
-                        alt="user"
-                      />
-                    </div>
-                    <span class="text-[14px] font-semibold text-slate-600"
-                      >John Doe</span
-                    >
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    XII IPA 1
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    john.doe@example.com
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    081234567890
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-center text-md font-semibold text-slate-500"
-                  >
-                    Lunas
-                  </td>
-                </tr>
-                <tr class="cursor-pointer hover:bg-gray-100">
-                  <td class="flex items-center gap-4 py-4 px-4 border-b">
-                    <div class="size-8 rounded-full overflow-hidden">
-                      <img
-                        class="block size-full object-cover"
-                        src="/frontend/public/img/Profile-IG.jpg"
-                        alt="user"
-                      />
-                    </div>
-                    <span class="text-[14px] font-semibold text-slate-600"
-                      >John Doe</span
-                    >
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    XII IPA 1
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    john.doe@example.com
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    081234567890
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-center text-md font-semibold text-slate-500"
-                  >
-                    Lunas
-                  </td>
-                </tr>
-                <tr class="cursor-pointer hover:bg-gray-100">
-                  <td class="flex items-center gap-4 py-4 px-4 border-b">
-                    <div class="size-8 rounded-full overflow-hidden">
-                      <img
-                        class="block size-full object-cover"
-                        src="/frontend/public/img/Profile-IG.jpg"
-                        alt="user"
-                      />
-                    </div>
-                    <span class="text-[14px] font-semibold text-slate-600"
-                      >John Doe</span
-                    >
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    XII IPA 1
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    john.doe@example.com
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                  >
-                    081234567890
-                  </td>
-                  <td
-                    class="py-4 px-4 border-b text-center text-md font-semibold text-slate-500"
-                  >
-                    Lunas
-                  </td>
-                </tr>
+                
               </tbody>
             </table>
           </divdiv>
         </div>
       </div>
     </div>
+
+    <script src="/frontend/logic/pantauSiswa.js"></script>
   </body>
 </html>
