--- a/frontend/pages/admin/buat_tagihan_semua.html
+++ b/frontend/pages/admin/buat_tagihan_semua.html
@@ -23,7 +23,7 @@
           </h1>
 
           <div>
-            <form action="">
+            <form id="form-buat-semua-tagihan">
               <div class="flex flex-col space-y-4">
                 <div class="flex flex-col space-y-2 w-1/2">
                   <label for="kelas">Kelas</label>
@@ -32,12 +32,31 @@
                     id="kelas"
                     class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
                   >
-                    <option value="Kelas" selected disabled hidden>
-                      XII-1
-                    </option>
+                    <option value="XII-1">XII-1</option>
+                    <option value="XII-2">XII-2</option>
+                    <option value="XII-3">XII-3</option>
+                    <option value="XII-4">XII-4</option>
+                    <option value="XI-1">XI-1</option>
+                    <option value="XI-2">XI-2</option>
+                    <option value="XI-3">XI-3</option>
+                    <option value="XI-4">XI-4</option>
+                    <option value="X-1">X-1</option>
+                    <option value="X-2">X-2</option>
+                    <option value="X-3">X-3</option>
+                    <option value="X-4">X-4</option>
                   </select>
                 </div>
 
+                <div class="flex flex-col space-y-2 w-full">
+                  <label for="jumlah-tagihan">Masukkan Nominal</label>
+                  <input
+                    type="text"
+                    class="p-3 outline-none bg-slate-300 text-slate-700 rounded-md"
+                    name="jumlah-tagihan"
+                    id="jumlah-tagihan"
+                    placeholder="Sertakan Nominal..."
+                  />
+                </div>
                 <div class="flex flex-col space-y-2 w-full">
                   <label for="catatan">Masukkan Dekripsi</label>
                   <textarea
@@ -87,5 +106,6 @@
         </div>
       </div>
     </div>
+    <script src="/frontend/logic/buatSemuaTagihan.js"></script>
   </body>
 </html>
