--- a/frontend/pages/admin/tambah_siswa.html
+++ b/frontend/pages/admin/tambah_siswa.html
@@ -69,20 +69,7 @@
                     class="w-full bg-slate-300 px-4 py-3 outline-none border-none rounded-lg my-2 placeholder:text-xs text-slate-700 text-sm"
                   />
                 </div>
-                <div>
-                  <label
-                    class="text-sm text-slate-600 font-semibold"
-                    for="email"
-                    >Email</label
-                  >
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="siswa717@gmail.com"
-                    class="w-full bg-slate-300 px-4 py-3 outline-none border-none rounded-lg my-2 placeholder:text-xs text-slate-700 text-sm"
-                  />
-                </div>
+
                 <div>
                   <label
                     class="text-sm text-slate-600 font-semibold"
@@ -115,18 +102,14 @@
                 <div class="flex flex-col w-fit">
                   <label
                     class="text-sm text-slate-600 font-semibold"
-                    for="kelas"
-                    >Kelas</label
+                    for="tahun-pelajaran"
+                    >Tahun Pelajaran</label
                   >
                   <select
-                    name="kelas"
-                    id="kelas"
+                    name="tahun-pelajaran"
+                    id="tahun-pelajaran"
                     class="w-fit bg-slate-600 py-3 px-4 outline-none border-none rounded-lg my-2 placeholder:text-xs text-slate-100 text-sm"
-                  >
-                    <option value="X">X</option>
-                    <option value="XI">XI</option>
-                    <option value="XII">XII</option>
-                  </select>
+                  ></select>
                 </div>
 
                 <button
