prove in work flow web app

--- a/frontend/pages/admin/dashboard.html
+++ b/frontend/pages/admin/dashboard.html
@@ -119,11 +119,11 @@
                 class="flex flex-col justify-center items-start gap-1 max-w-3/4"
               >
                 <h1 class="font-semibold text-slate-100 text-lg">
-                  Pantau Siswa
+                  Pantau Pembayaran Siswa
                 </h1>
                 <p class="font-normal text-slate-100 text-xs capitalize">
-                  ayo pantau siswa dari kelas 10 sampai kelas 12, dan lihat
-                  riwayat pembayaran disini!
+                  ayo pantau pembayaran siswa dari kelas 10 sampai kelas 12, dan
+                  lihat riwayat pembayaran disini!
                 </p>
               </div>
             </div>
