--- a/frontend/pages/user/konfirmasi_pembayaran.html
+++ b/frontend/pages/user/konfirmasi_pembayaran.html
@@ -42,21 +42,9 @@
               </div>
 
               <div class="flex flex-col w-full space-y-2 rounded-md mt-3">
-                <label for="kelas" class="font-medium text-slate-700"
-                  >Kelas</label
-                >
-                <input
-                  type="text"
-                  name="kelas"
-                  id="kelas"
-                  class="bg-slate-200 py-3 px-2 rounded-md disabled:opacity-50 disabled:border-2 disabled:border-slate-300"
-                  placeholder="Kelas.."
-                />
-              </div>
-              <div class="flex flex-col w-full space-y-2 rounded-md mt-3">
                 <label for="nominal" class="font-medium text-slate-700"
-                  >Nominal/label
-                >
+                  >Nominal Yang Harus Dibayar
+                </label>
                 <input
                   type="text"
                   name="nominal"
