--- a/frontend/pages/admin/buat_tagihan_semua.html
+++ b/frontend/pages/admin/buat_tagihan_semua.html
@@ -16,7 +16,7 @@
           >Kembali</a
         >
         <div
-          class="container max-w-3xl absolute left-1/2 -translate-x-1/2 translate-y-1/2 -bottom-32 bg-slate-100 px-8 py-6 rounded-lg shadow-lg"
+          class="container max-w-3xl absolute left-1/2 -translate-x-1/2 translate-y-1/2 -bottom-14 bg-slate-100 px-8 py-6 rounded-lg shadow-lg"
         >
           <h1 class="text-slate-700 font-semibold text-2xl capitalize mb-4">
             buat untuk tagihan semua siswa
@@ -32,18 +32,9 @@
                     id="kelas"
                     class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
                   >
-                    <option value="XII-1">XII-1</option>
-                    <option value="XII-2">XII-2</option>
-                    <option value="XII-3">XII-3</option>
-                    <option value="XII-4">XII-4</option>
-                    <option value="XI-1">XI-1</option>
-                    <option value="XI-2">XI-2</option>
-                    <option value="XI-3">XI-3</option>
-                    <option value="XI-4">XI-4</option>
-                    <option value="X-1">X-1</option>
-                    <option value="X-2">X-2</option>
-                    <option value="X-3">X-3</option>
-                    <option value="X-4">X-4</option>
+                    <option value="XII">XII</option>
+                    <option value="XI">XI</option>
+                    <option value="X">X</option>
                   </select>
                 </div>
 
@@ -66,32 +57,7 @@
                     placeholder="Tinggalkan Catatan..."
                   ></textarea>
                 </div>
-                <div>
-                  <div
-                    class="flex flex-col justify-ceenter items-start gap-1 p-2 bg-slate-200 rounded-lg w-[40%]"
-                  >
-                    <div
-                      class="size-20 rounded-md shadow-md overflow-hidden cursor-pointer hover:opacity-50"
-                    >
-                      <img
-                        class="block size-full object-cover"
-                        src="/frontend/public/img/Profile-IG.jpg"
-                        alt="qrcode"
-                      />
-                    </div>
-                    <label
-                      class="font-normal text-md text-slate-100 capitalize cursor-pointer px-3 py-2 bg-slate-700 rounded-md text-center text-sm hover:bg-slate-500 mt-2"
-                      for="qrcode"
-                      >Masukkan Qrcode anda disini</label
-                    >
-                    <input
-                      type="file"
-                      name="qrcode"
-                      id="qrcode"
-                      class="bg-slate-500 py-1 px-1 rounded-md w-full text-slate-100 cursor-pointer hover:bg-slate-700 mt-4 text-center hidden"
-                    />
-                  </div>
-                </div>
+
                 <div>
                   <button
                     type="submit"
