--- a/frontend/pages/admin/pantau_siswa.html
+++ b/frontend/pages/admin/pantau_siswa.html
@@ -10,6 +10,95 @@
   <body>
     <div class="min-h-screen bg-slate-100">
       <div class="relative bg-slate-700 w-full h-[275px]">
+        <div
+          id="popup-update-siswa"
+          class="w-[35%] h-[45dvh] absolute top-3/4 left-[40%] -translate-x-1/4 bg-slate-200 rounded-2xl z-40 px-8 py-10 flex-col justify-center shadow-md hidden"
+        >
+          <button
+            id="close-popup"
+            type="button"
+            class="size-10 rounded-full bg-red-600 text-slate-100 grid place-items-center absolute -right-3 -top-3 font-semibold text-lg cursor-pointer transition-all duration-150 hover:bg-red-800"
+          >
+            X
+          </button>
+
+          <div class="flex gap-4 items-center justify-start my-4">
+            <i class="fa-solid fa-file-pen text-4xl text-slate-700"></i>
+            <div>
+              <h1 class="font-medium text-xl text-slate-700">
+                Perbarui Status Data Siswa
+              </h1>
+              <p class="text-xs font-medium text-slate-600">
+                SMA Wahidiyah Kota Lumajang
+              </p>
+            </div>
+          </div>
+          <div>
+            <div class="flex flex-col space-y-4">
+              <input
+                type="hidden"
+                name="nama"
+                id="popup-hidden"
+                class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
+                placeholder="Masukkan Nama Siswa"
+                value="arjun samudera ahli fikri"
+              />
+
+              <div class="flex flex-col space-y-2 w-full">
+                <label for="nama">Nama</label>
+                <input
+                  name="nama"
+                  id="popup-nama-siswa"
+                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
+                  placeholder="Masukkan Nama Siswa"
+                  value="arjun samudera ahli fikri"
+                />
+              </div>
+
+              <div class="flex flex-col space-y-2 w-full">
+                <label for="kelas">Kelas</label>
+                <input
+                  name="kelas"
+                  id="popup-kelas-siswa"
+                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
+                  placeholder="Masukkan Kelas Siswa"
+                  value="XII-1"
+                />
+              </div>
+
+              <div class="flex flex-col space-y-2 w-full">
+                <label for="jumlah-tagihan">Jumlah Tagihan</label>
+                <input
+                  type="text"
+                  name="jumlah-tagihan"
+                  id="popup-jumlah-tagihan-siswa"
+                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
+                  value="Rp. 1.000.000"
+                  placeholder="Masukkan Jumlah Tagihan"
+                />
+              </div>
+
+              <div class="flex gap-4">
+                <form id="form-deleted-siswa" class="w-full block">
+                  <button
+                    type="submit"
+                    class="w-full bg-red-600 text-white rounded-md px-4 py-2 cursor-pointer transition-all duration-150 hover:bg-red-800 font-semibold"
+                  >
+                    Hapus Tagihan Siswa
+                  </button>
+                </form>
+                <form id="form-update-siswa" class="w-full block">
+                  <button
+                    type="submit"
+                    class="w-full bg-emerald-600 text-white rounded-md px-4 py-2 cursor-pointer transition-all duration-150 hover:bg-emerald-800 font-semibold"
+                  >
+                    Simpan
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
         <a
           href="/frontend/pages/admin/dashboard.html"
           class="absolute top-8 left-16 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
@@ -20,7 +109,7 @@
           <i class="fa-solid fa-user-group text-slate-100 text-6xl"></i>
           <div>
             <h1 class="text-slate-100 font-semibold text-3xl capitalize">
-              pantau siswa
+              pantau pembayaran siswa
             </h1>
             <p class="text-slate-300 font-normal text-sm capitalize mt-1">
               SMA Wahidiyah Lumajang
@@ -32,51 +121,58 @@
           <div
             class="overflow-x-auto max-w-11/12 mx-auto my-10 rounded-l-lg rounded-r-lg shadow-md"
           >
+            <div
+              class="flex gap-3 bg-slate-100 w-fit px-2 py-3 rounded-tl-lg rounded-tr-lg shadow-md"
+            >
+              <div class="flex items-center gap-2">
+                <label
+                  class="text-sm font-medium texet-slate-800"
+                  for="tingkatan_kelas"
+                  >Tingkatan Kelas</label
+                >
+                <select
+                  name="tingkatan_kelas"
+                  id="tingkatan_kelas"
+                  class="outline-emerald-600"
+                >
+                  <option value="10">10</option>
+                  <option value="11">11</option>
+                  <option value="12">12</option>
+                </select>
+              </div>
 
-
-          <div class="flex gap-3 bg-slate-100 w-fit px-2 py-3 rounded-tl-lg rounded-tr-lg shadow-md">
-            <div class="flex items-center gap-2">
-              <label class="text-sm font-medium texet-slate-800" for="tingkatan_kelas">Tingkatan Kelas</label>
-              <select name="tingkatan_kelas" id="tingkatan_kelas" class="outline-emerald-600">
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-              </select>
+              <div class="flex items-center gap-2">
+                <label class="text-sm font-medium text-slate-800" for="kelas"
+                  >Kelas</label
+                >
+                <select name="kelas" id="kelas" class="outline-emerald-600">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                </select>
+              </div>
             </div>
-            
-            <div class="flex items-center gap-2">
-              <label class="text-sm font-medium text-slate-800" for="kelas">Kelas</label>
-              <select name="kelas" id="kelas" class="outline-emerald-600">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-              </select>
-            </div>
-
-          </div>
 
             <table class="table-auto min-w-full bg-white">
               <thead>
                 <tr class="bg-[#16C47F] text-slate-100">
-                  <th class="py-4 px-4 border-b text-left">Nama</th>
-                  <th class="py-4 px-4 border-b text-left">Kelas</th>
-                  <th class="py-4 px-4 border-b text-left">Email</th>
-                  <th class="py-4 px-4 border-b text-left">Nomor HP</th>
+                  <th class="py-4 pl-6 border-b text-left">Nama</th>
+                  <th class="py-4 px-4 border-b text-center">Kelas</th>
                   <th class="py-4 px-4 border-b text-center">
-                    Status Pembayaran
+                    Nominal Tagihan
                   </th>
+                  <th class="py-4 px-4 border-b text-center">Tagihan Dibuat</th>
                 </tr>
               </thead>
-              <tbody>
-                
-              </tbody>
+              <tbody></tbody>
             </table>
-          </divdiv>
+          </div>
         </div>
       </div>
     </div>
 
+    <!-- <script src="/frontend/logic/popupPantauSiswa.js"></script> -->
     <script src="/frontend/logic/pantauSiswa.js"></script>
   </body>
 </html>
