--- a/frontend/pages/admin/tambah_siswa.html
+++ b/frontend/pages/admin/tambah_siswa.html
@@ -99,17 +99,34 @@
                   />
                 </div>
 
-                <div class="flex flex-col w-fit">
-                  <label
-                    class="text-sm text-slate-600 font-semibold"
-                    for="tahun-pelajaran"
-                    >Tahun Pelajaran</label
-                  >
-                  <select
-                    name="tahun-pelajaran"
-                    id="tahun-pelajaran"
-                    class="w-fit bg-slate-600 py-3 px-4 outline-none border-none rounded-lg my-2 placeholder:text-xs text-slate-100 text-sm"
-                  ></select>
+                <div class="flex gap-4 items-center">
+                  <div class="flex flex-col w-fit">
+                    <label
+                      class="text-sm text-slate-600 font-semibold"
+                      for="kelas-siswa"
+                      >Kelas</label
+                    >
+                    <select
+                      name="kelas-siswa"
+                      id="kelas-siswa"
+                      class="w-fit bg-slate-600 py-3 px-4 outline-none border-none rounded-lg my-2 placeholder:text-xs text-slate-100 text-sm"
+                    >
+                      <option value="testing">testing</option>
+                    </select>
+                  </div>
+
+                  <div class="flex flex-col w-fit">
+                    <label
+                      class="text-sm text-slate-600 font-semibold"
+                      for="tahun-pelajaran"
+                      >Tahun Pelajaran</label
+                    >
+                    <select
+                      name="tahun-pelajaran"
+                      id="tahun-pelajaran"
+                      class="w-fit bg-slate-600 py-3 px-4 outline-none border-none rounded-lg my-2 placeholder:text-xs text-slate-100 text-sm"
+                    ></select>
+                  </div>
                 </div>
 
                 <button
