--- a/frontend/pages/admin/dashboard.html
+++ b/frontend/pages/admin/dashboard.html
@@ -128,22 +128,28 @@
               </div>
             </div>
           </a>
-          <div
+          <a
+            href="/frontend/pages/admin/nomorRekening.html"
             class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%]"
           >
             <div class="max-w-3/4 flex items-center gap-4">
               <div class="text-center text-slate-100 size-fit">
-                <i class="fa-solid fa-plus text-[65px]"></i>
+                <i class="fa-solid fa-credit-card text-[65px]"></i>
               </div>
 
               <div
                 class="flex flex-col justify-center items-start gap-1 max-w-3/4"
               >
-                <h1 class="font-semibold text-slate-100 text-lg"></h1>
-                <p class="font-normal text-slate-100 text-xs capitalize"></p>
+                <h1 class="font-semibold text-slate-100 text-lg">
+                  Nomor Rekening
+                </h1>
+                <p class="font-normal text-slate-100 text-xs capitalize">
+                  anda bisa menambahkan, mengubah, menghapus nomor rekening
+                  untuk keperluan pembayaran siswa disini!
+                </p>
               </div>
             </div>
-          </div>
+          </a>
         </div>
 
         <div
@@ -269,6 +275,6 @@
         </div>
       </div>
     </div>
-    <script src="/frontend/logic/dashboard.js"></script>
+    <script type="module" src="/frontend/logic/dashboard.js"></script>
   </body>
 </html>
