--- a/frontend/pages/admin/tambah_siswa.html
+++ b/frontend/pages/admin/tambah_siswa.html
@@ -110,9 +110,7 @@
                       name="kelas-siswa"
                       id="kelas-siswa"
                       class="w-fit bg-slate-600 py-3 px-4 outline-none border-none rounded-lg my-2 placeholder:text-xs text-slate-100 text-sm"
-                    >
-                      <option value="testing">testing</option>
-                    </select>
+                    ></select>
                   </div>
 
                   <div class="flex flex-col w-fit">
@@ -143,6 +141,6 @@
     </div>
 
     <script src="/frontend/features/imageProfile/changeProfileUser.js"></script>
-    <script src="/frontend/logic/tambahSiswa.js"></script>
+    <script type="module" src="/frontend/logic/tambahSiswa.js"></script>
   </body>
 </html>
