--- a/frontend/pages/admin/pantau_siswa.html
+++ b/frontend/pages/admin/pantau_siswa.html
@@ -12,7 +12,7 @@
       <div class="relative bg-slate-700 w-full h-[275px]">
         <div
           id="popup-update-siswa"
-          class="w-[35%] h-[45dvh] absolute top-3/4 left-[40%] -translate-x-1/4 bg-slate-200 rounded-2xl z-40 px-8 py-10 flex-col justify-center shadow-md hidden"
+          class="w-[35%] h-fit absolute top-3/4 left-[40%] -translate-x-1/4 bg-slate-200 rounded-2xl z-40 px-8 py-10 flex-col justify-center shadow-md hidden"
         >
           <button
             id="close-popup"
@@ -41,17 +41,16 @@
                 id="popup-hidden"
                 class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
                 placeholder="Masukkan Nama Siswa"
-                value="arjun samudera ahli fikri"
               />
 
               <div class="flex flex-col space-y-2 w-full">
                 <label for="nama">Nama</label>
                 <input
+                disabled="disabled"
                   name="nama"
                   id="popup-nama-siswa"
-                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
+                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3 disabled:opacity-50 disabled:border-2 disabled:border-slate-300"
                   placeholder="Masukkan Nama Siswa"
-                  value="arjun samudera ahli fikri"
                 />
               </div>
 
@@ -60,7 +59,7 @@
                 <input
                   name="kelas"
                   id="popup-kelas-siswa"
-                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
+                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3 disabled:opacity-50 disabled:border-2 disabled:border-slate-300"
                   placeholder="Masukkan Kelas Siswa"
                   value="XII-1"
                 />
@@ -72,29 +71,31 @@
                   type="text"
                   name="jumlah-tagihan"
                   id="popup-jumlah-tagihan-siswa"
-                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
+                  class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3 disabled:opacity-50 disabled:border-2 disabled:border-slate-300"
                   value="Rp. 1.000.000"
                   placeholder="Masukkan Jumlah Tagihan"
                 />
               </div>
 
-              <div class="flex gap-4">
-                <form id="form-deleted-siswa" class="w-full block">
-                  <button
-                    type="submit"
-                    class="w-full bg-red-600 text-white rounded-md px-4 py-2 cursor-pointer transition-all duration-150 hover:bg-red-800 font-semibold"
-                  >
-                    Hapus Tagihan Siswa
-                  </button>
-                </form>
-                <form id="form-update-siswa" class="w-full block">
-                  <button
-                    type="submit"
-                    class="w-full bg-emerald-600 text-white rounded-md px-4 py-2 cursor-pointer transition-all duration-150 hover:bg-emerald-800 font-semibold"
-                  >
-                    Simpan
-                  </button>
-                </form>
+              <div id="wrapper-proof-of-payment"></div>
+
+              <div id="wrapper-edit-payment" class="flex gap-4"><form id="form-deleted-siswa" class="w-full block">
+                <button
+                id="delete-and-cancel-payment"
+                  type="submit"
+                  class="w-full bg-red-600 text-white rounded-md px-4 py-2 cursor-pointer transition-all duration-150 hover:bg-red-800 font-semibold"
+                >
+                  Hapus Tagihan Siswa
+                </button>
+              </form>
+              <form id="form-update-siswa" class="w-full block">
+                <button
+                id="save-and-confirm-payment"
+                  type="submit"
+                  class="w-full bg-emerald-600 text-white rounded-md px-4 py-2 cursor-pointer transition-all duration-150 hover:bg-emerald-800 font-semibold disabled:opacity-40"
+                >
+                  Simpan
+                </button>
               </div>
             </div>
           </div>
@@ -158,7 +159,8 @@
               <thead>
                 <tr class="bg-[#16C47F] text-slate-100">
                   <th class="py-4 pl-6 border-b text-left">Nama</th>
-                  <th class="py-4 px-4 border-b text-center">Kelas</th>
+                  <th class="py-4 border-b text-center">Kelas</th>
+                  <th class="py-4 px-4 border-b text-center">Tapel</th>
                   <th class="py-4 px-4 border-b text-center">
                     Nominal Tagihan
                   </th>
@@ -173,6 +175,6 @@
     </div>
 
     <!-- <script src="/frontend/logic/popupPantauSiswa.js"></script> -->
-    <script src="/frontend/logic/pantauSiswa.js"></script>
+    <script type="module" src="/frontend/logic/pantauSiswa.js"></script>
   </body>
 </html>
