--- a/frontend/pages/user/cek_tagihan.html
+++ b/frontend/pages/user/cek_tagihan.html
@@ -53,6 +53,9 @@
       </div>
     </div>
 
-    <script src="/frontend/logic/cekTagihanUntukSiswa.js"></script>
+    <script
+      type="module"
+      src="/frontend/logic/cekTagihanUntukSiswa.js"
+    ></script>
   </body>
 </html>
