--- a/frontend/pages/user/konfirmasi_pembayaran.html
+++ b/frontend/pages/user/konfirmasi_pembayaran.html
@@ -28,7 +28,7 @@
           </div>
 
           <div class="my-4">
-            <form>
+            <form enctype="multipart/form-data">
               <div class="flex flex-col w-full space-y-2 rounded-md mt-3">
                 <label for="nama" class="font-medium text-slate-700"
                   >Nama</label
@@ -54,25 +54,26 @@
                 />
               </div>
 
-              <div class="w-full h-20 overflow-y-auto rounded-md mt-3">
-                <img
-                  src="/frontend/public/img/contoh_pembayaran_briva.jpg"
-                  alt="bukti_pembayaran"
-                  class="block size-full object-cover"
-                />
-              </div>
               <div>
                 <label
-                  for="bukti_pembayaran"
-                  class="block px-4 py-2 w-full rounded-md font-medium text-slate-100 bg-slate-800 text-center cursor-pointer text-sm transition-all duration-150 hover:bg-slate-600 mt-2"
-                  >Kirim Foto Bukti Pembayaran</label
+                  for="avatar"
+                  class="h-42 block w-full rounded-md font-medium text-slate-100 bg-transparent border-dashed border-2 border-slate-600 text-center cursor-pointer text-sm transition-all duration-150 hover:bg-slate-300 mt-2 overflow-hidden"
                 >
-                <input
-                  class="hidden"
-                  type="file"
-                  name="bukti_pembayaran"
-                  id="bukti_pembayaran"
-                />
+                  <img
+                    id="current-image-payment"
+                    class="block size-full object-cover"
+                  />
+
+                  <!-- <div
+                    class="size-full flex flex-col justify-center items-center gap-3 text-slate-700"
+                  >
+                    <i class="fa-solid fa-file text-2xl"></i>
+                    <h1 class="text-xl font-medium">
+                      Upload Bukti Pembayaran Disini
+                    </h1>
+                  </div> -->
+                </label>
+                <input class="hidden" type="file" name="avatar" id="avatar" />
               </div>
 
               <div
@@ -92,8 +93,9 @@
               </div>
 
               <button
+                disabled="true"
                 type="submit"
-                class="w-full text-slate-100 bg-blue-600 rounded-lg shadow-md text-sm font-medium capitalize px-4 py-2 mt-4 transition-all duration-150 ease-in-out hover:bg-blue-700 cursor-pointer"
+                class="w-full text-slate-100 bg-blue-600 rounded-lg shadow-md text-sm font-medium capitalize px-4 py-2 mt-4 transition-all duration-150 ease-in-out hover:bg-blue-700 cursor-pointer disabled:opacity-45"
               >
                 konfirmasi pembayaran
               </button>
@@ -103,6 +105,9 @@
       </div>
     </div>
 
-    <script src="/frontend/logic/konfirmasiPembayaran.js"></script>
+    <script
+      type="module"
+      src="/frontend/logic/konfirmasiPembayaran.js"
+    ></script>
   </body>
 </html>
