complete : fitur CRUD data tahun pelajaran dan kelas - halaman master data

--- a/frontend/pages/auth/login.html
+++ b/frontend/pages/auth/login.html
@@ -35,7 +35,7 @@
           <!-- login -->
           <div class="mt-6">
             <!-- status login -->
-            <div class="flex items-center justify-start gap-3">
+            <!-- <div class="flex items-center justify-start gap-3">
               <div class="overflow-hidden rounded-full size-14">
                 <img
                   class="block object-cover size-full"
@@ -66,7 +66,7 @@
                   </button>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <form
               action="http://localhost:3000/login"
@@ -103,12 +103,12 @@
                 />
               </div>
 
-              <div class="flex gap-3 mt-4">
+              <!-- <div class="flex gap-3 mt-4">
                 <input type="checkbox" name="checkbox id="checkbox" />
                 <label class="text-xs text-slate-600" for="checkbox"
-                  >Saya Adalah Seorang Admin</label
+                  >Saya Telah Mem</label
                 >
-              </div>
+              </div> -->
 
               <div class="mx-auto mt-7 w-fit">
                 <button
