--- a/frontend/pages/admin/dashboard.html
+++ b/frontend/pages/admin/dashboard.html
@@ -32,11 +32,15 @@
           <nav>
             <ul class="flex gap-4">
               <li class="cursor-pointer">
-                <div
-                  class="size-10 rounded-full bg-slate-900 p-2 text-slate-100 flex justify-center items-center"
+                <a
+                  href="/frontend/pages/admin/masterData.html"
+                  class="rounded-md bg-slate-900 p-2 text-slate-100 flex justify-center items-center px-4 py-3 flex justify-evenly items-center gap-2 hover:bg-slate-700"
                 >
-                  <i class="fa-regular fa-bell text-lg"></i>
-                </div>
+                  <i class="fa-solid fa-database text-lg"></i>
+                  <span class="text-xs font-medium text-slate-200"
+                    >Halaman Master Data</span
+                  >
+                </a>
               </li>
               <li class="cursor-pointer">
                 <div
